# plugin-for-source-item-animation

./: CMakeLists.txt
src/: helper.c  helper.h
src/motion-filter/: CMakeLists.txt  motion-filter.c
src/motion-transition/: CMakeLists.txt  motion-transition.c
